# latentspeed

./: .gitignore  .gitmodules  =0.4.0  BUILD_MULTI_EXCHANGE.md  BUILD_PHASE2.sh  BUILD_PHASE3.sh  BUILD_PHASE4.sh  BUILD_PHASE5.sh  CHANGELOG_DYDX.md  CHANGES.md  CMakeLists.txt  CMakePresets.json  DIRECTORY_RESTRUCTURE_PLAN.md  Doxyfile  HEADER_CLEANUP_PROGRESS.md  HEADER_IMPLEMENTATION_FIX_STATUS.md  HYPERLIQUID_HUMMINGBOT_ALIGNMENT.md  HYPERLIQUID_ORDER_SCHEMAS.md  HYPERLIQUID_PERPETUAL_REFACTOR_GUIDE.md  IMPLEMENTATION_FIX_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LEAD_LAG_QUICKSTART.md  MULTI_EXCHANGE_GUIDE.md  NEXT_TASKS.md  PHASE5_DONE.md  PRODUCTION.md  PROJECT_COMPLETE.md  QUICKSTART_FIX_AND_RESTRUCTURE.md  QUICKSTART_HYPERLIQUID.md  README.md  RESTRUCTURE_CHECKLIST.md  RESTRUCTURE_NOW.md  START_HERE_RESTRUCTURE.md  START_TRADING_SYSTEM.md  TESTING_GUIDE_BYBIT.md  WHAT_TO_DO_NOW.md  build.sh  build_market_data.sh  move_engine.sh  results.md  (+9 more)
.github/workflows/: docs.yml
.windsurf/rules/: build-script.md  environment.md
assets/: Message Contract for Execution & Backtest.md  Message Contract for Execution & Backtest.md:Zone.Identifier  Message Contract for Execution & Backtest.mdZone.Identifier  sequence_diagram.svgZone.Identifier
benchmark/: CMakeLists.txt  hft_benchmark.cpp
config/: bybit_demo.json
configs/: config.yml  config_hyperliquid.yml  config_uniswap.yml  hyperliquid_credentials.yml  marketstream_hyperliquid.yml
docs/: ARKPAD_VS_HUMMINGBOT_COMPARISON.md  DEPLOYMENT.md  DYDX_INTEGRATION.md  EXCHANGE_ADAPTER_ARCHITECTURE_PLAN.md  FIXES_APPLIED_SUMMARY.md  HFT_OPTIMIZATIONS.md  HUMMINGBOT_TRADING_LIFECYCLE.md  HYPERLIQUID_ADAPTER_USAGE.md  HYPERLIQUID_CONNECTOR_IMPLEMENTATION_COMPLETE.md  HYPERLIQUID_CONNECTOR_INTEGRATION_PLAN.md  HYPERLIQUID_INTEGRATION.md  HYPERLIQUID_REFERENCE.md  HYPERLIQUID_SIGNER_README.md  LEADLAG_INTEGRATION_REPORT.md  PYTHON_TO_CPP_MIGRATION_GUIDE.md  QUICK_FIXES.md  TECHNICAL_DEBT_ANALYSIS.md  TESTING_GUIDE_DYDX.md  UNISWAP_V4_INTEGRATION.md  system.md
docs/diagrams/: 01_order_placement.puml  02_async_updates.puml  03_publishing.puml  README.md  interaction_overview.md  order_flow_activity.md  sequence_diagram.puml  test_simple.puml
docs/html/: annotated.html  classes.html  classlatentspeed_1_1TradingEngineService-members.html  classlatentspeed_1_1TradingEngineService.html  classlatentspeed_1_1TradingEngineService__inherit__graph.dot  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_10.dot  inherit_graph_11.dot  inherit_graph_12.dot  inherit_graph_13.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherit_graph_7.dot  inherit_graph_8.dot  inherit_graph_9.dot  inherits.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp_source.html  menudata.js  namespacelatentspeed.html  namespacemembers.html  namespacemembers_type.html  (+35 more)
docs/refactoring/: 00_OVERVIEW.md  01_CURRENT_STATE.md  02_PHASE1_CORE_ARCHITECTURE.md  03_PHASE2_ORDER_TRACKING.md  04_PHASE3_DATA_SOURCES.md  05_PHASE4_AUTH_MODULES.md  06_PHASE5_EVENT_LIFECYCLE.md  07_MIGRATION_STRATEGY.md  08_FILE_STRUCTURE.md  CHECKLIST.md  INDEX.md  ONE_PAGE_STATUS.md  OVERALL_PROGRESS_UPDATE.md  PHASE1-4_COMPLETE.md  PHASE1_README.md  PHASE2_FIXES.md  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_CHECKLIST.md  PHASE5_COMPLETE.md  PHASE5_FINAL_SUMMARY.md  PHASE5_IMPLEMENTATION_REPORT.md  PHASE5_README.md  PHASE5_SUMMARY.md  PHASE6_COMPLETE.md  PHASE6_INTEGRATION_GUIDE.md  PRESENTATION_SCRIPT.md  PROGRESS_REPORTS.md  QUICK_SCRIPT_2MIN.md  README_PHASE5.md  SCRUM_PROGRESS.md  STANDUP_SUMMARY.md
examples/: =0.4.0  FIXES_APPLIED.md  LOGGING_GUIDE.md  QUICK_START.md  REACTIVE_TRADING_README.md  README.md  dydx_provider.cpp  feed_handler_config.cpp  hyperliquid_example.cpp  hyperliquid_integrated_example.cpp  lead_lag_strategy_live.py  market_data_monitor.py  marketstream.cpp  multi_exchange_provider.cpp  python_bindings_example.py  python_trading_client.py  run_reactive_trading.sh  send_order.py  setup_strategy_env.sh  simple_zmq_test.py  strategy_simple_momentum.py  test_engine.py  test_marketstream.py  test_marketstream_zmq.py  test_zmq_subscriber.py  verify_dydx_streaming.py
include/: action_dispatch.h  exchange_interface.h  feed_handler.h  hft_data_structures.h  market_data_provider.h  reason_code_mapper.h  rolling_stats.h  symbol_fetcher.h  trading_engine_service.h
include/adapters/: binance_adapter.h  (+8 more)
src/: exchange_interface.cpp  feed_handler.cpp  main.cpp  main_trading_engine.cpp  market_data_provider.cpp  marketstream.cpp  python_bindings.cpp  symbol_fetcher.cpp  test_market_data.cpp  trading_engine_service.cpp
src/connector/: CMakeLists.txt  CMakeLists.txt.after_restructure  client_order_tracker.cpp  connector_base.cpp  hyperliquid_auth.cpp  in_flight_order.cpp  zmq_order_event_publisher.cpp
src/connector/exchange/hyperliquid/: hyperliquid_auth.cpp  hyperliquid_integrated_connector.cpp  hyperliquid_marketstream_adapter.cpp  hyperliquid_order_book_data_source.cpp  hyperliquid_perpetual_connector.cpp  hyperliquid_user_stream_data_source.cpp
src/marketstream/: CMakeLists.txt  exchange_interface.cpp  feed_handler.cpp  market_data_provider.cpp
tests/: README.md  action_dispatch_test.cpp  reason_mapper_test.cpp  requirements.txt  symbol_mapper_test.cpp
tests/unit/connector/: CMakeLists.txt  test_connector_base.cpp  test_hyperliquid_connector.cpp  test_hyperliquid_utils.cpp  test_integration_adapter.cpp  test_order_book.cpp  test_order_tracking.cpp  test_zmq_publisher.cpp
tools/: diagnose_python.sh  execute_restructure.sh  fix_remaining_headers.sh  hl_signer_bridge.py  install_hl_deps_system.sh  requirements.txt  setup_hl_signer.sh  test_signer.py  test_signer_directly.sh  test_usersite.py  verify_wallet.py
(+122 files in other folders)
